# mlx_whisper_yt2srt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  yt2srt.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
src/mlx_whisper_yt2srt/: __init__.py  app.py  cli.py  config.py  errors.py  progress.py  srt.py  transcription.py  youtube.py
tests/: test_app.py  test_cli.py  test_srt.py  test_transcription.py  test_youtube.py
