[project]
name = "mlx-whisper-yt2srt"
version = "0.1.0"
description = "Convert YouTube videos to SRT subtitle files using MLX Whisper."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "hillfieldhonest" }]
license = { file = "LICENSE" }
keywords = ["mlx", "whisper", "youtube", "srt", "subtitles", "yt-dlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mlx-whisper>=0.4.2",
    "yt-dlp>=2026.3.17",
]

[project.urls]
Repository = "https://github.com/hillfieldhonest/mlx_whisper_yt2srt"
Issues = "https://github.com/hillfieldhonest/mlx_whisper_yt2srt/issues"

[project.scripts]
yt2srt = "mlx_whisper_yt2srt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_whisper_yt2srt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
    "W",
]
